<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/relative_layout_background">

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_marginTop="5dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/password_hint"
            android:layout_below="@id/editTextEmailAddress"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/editTextPassword"
            android:layout_below="@id/editTextPassword"
            android:text="@string/checkbox_text"
            android:textSize="13sp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_color"
            android:layout_marginStart="5dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox"
            android:text="@string/sign_in"
            android:ems="18"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/beautiful_button"/>

        <TextView
            android:id="@+id/promptingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up_prompting"
            android:layout_below="@id/signInButton"
            android:textColor="@color/text_color"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

</RelativeLayout>